--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,9 @@ jobs:
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: enricorotundo
+          password: ${{ secrets.PYPI_API_TOKEN }}
 
   generate-relese:
     needs: publish-package
