--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/pytest-discord
+      url: https://pypi.org/p/pytest-discord-fork
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
 
