--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,46 +37,46 @@ jobs:
           name: dist
           path: ./dist/*
 
-  publish-package:
-    needs: build-package
-    runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/pytest-discord-fork
-    permissions:
-      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+  # publish-package:
+  #   needs: build-package
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: pypi
+  #     url: https://pypi.org/p/pytest-discord-fork
+  #   permissions:
+  #     id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
 
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: dist
-          path: ./dist
+  #   steps:
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         name: dist
+  #         path: ./dist
 
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+  #     - name: Publish to PyPI
+  #       uses: pypa/gh-action-pypi-publish@release/v1
 
-  generate-relese:
-    needs: publish-package
-    runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: write
+  # generate-relese:
+  #   needs: publish-package
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     id-token: write
+  #     contents: write
 
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: dist
-          path: ./dist
+  #   steps:
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         name: dist
+  #         path: ./dist
 
-      - name: Sign the dists with Sigstore
-        uses: sigstore/gh-action-sigstore-python@v2.1.1
-        with:
-          inputs: >-
-            ./dist/*.tar.gz
-            ./dist/*.whl
+  #     - name: Sign the dists with Sigstore
+  #       uses: sigstore/gh-action-sigstore-python@v2.1.1
+  #       with:
+  #         inputs: >-
+  #           ./dist/*.tar.gz
+  #           ./dist/*.whl
 
-      - name: Generate a GitHub release
-        uses: softprops/action-gh-release@v2
-        with:
-          generate_release_notes: true
-          files: dist/*
+  #     - name: Generate a GitHub release
+  #       uses: softprops/action-gh-release@v2
+  #       with:
+  #         generate_release_notes: true
+  #         files: dist/*
