--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
     timeout-minutes: 20
     environment:
       name: testpypi
-      url: https://pypi.org/p/pytest-discord
+      url: https://pypi.org/p/pytest-discord-fork
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
 
@@ -136,11 +136,8 @@ jobs:
       fail-fast: false
       matrix:
         python-version:
-          ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy-3.10"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        exclude:
-          - os: windows-latest
-            python-version: "3.11"
+          ["3.12", "pypy-3.10"]
+        os: [ubuntu-latest, macos-latest]
     concurrency:
       group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-ut-${{ matrix.os }}-${{ matrix.python-version }}
       cancel-in-progress: true
