--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,105 +68,106 @@ jobs:
           name: dist
           path: ./dist
 
-      - name: Publish package to TestPyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://test.pypi.org/legacy/
-          skip-existing: true
+      # - name: Publish package to TestPyPI
+      #   uses: pypa/gh-action-pypi-publish@release/v1
+      #   with:
+      #     repository-url: https://test.pypi.org/legacy/
+      #     skip-existing: true
+      #     verbose: true
 
-  sign-package:
-    needs: publish-package
-    runs-on: ubuntu-latest
-    concurrency:
-      group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-sign-pkg
-      cancel-in-progress: true
-    timeout-minutes: 20
-    permissions:
-      id-token: write
+  # sign-package:
+  #   needs: publish-package
+  #   runs-on: ubuntu-latest
+  #   concurrency:
+  #     group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-sign-pkg
+  #     cancel-in-progress: true
+  #   timeout-minutes: 20
+  #   permissions:
+  #     id-token: write
 
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: dist
-          path: ./dist
+  #   steps:
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         name: dist
+  #         path: ./dist
 
-      - name: Sign the dists with Sigstore
-        uses: sigstore/gh-action-sigstore-python@v2.1.1
-        with:
-          inputs: >-
-            ./dist/*.tar.gz
-            ./dist/*.whl
+  #     - name: Sign the dists with Sigstore
+  #       uses: sigstore/gh-action-sigstore-python@v2.1.1
+  #       with:
+  #         inputs: >-
+  #           ./dist/*.tar.gz
+  #           ./dist/*.whl
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: sigstore
-          path: ./dist/*
+  #     - uses: actions/upload-artifact@v4
+  #       with:
+  #         name: sigstore
+  #         path: ./dist/*
 
-  lint:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    concurrency:
-      group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-lint
-      cancel-in-progress: true
-    timeout-minutes: 20
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #   concurrency:
+  #     group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-lint
+  #     cancel-in-progress: true
+  #   timeout-minutes: 20
 
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         fetch-tags: true
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-          cache: pip
-          cache-dependency-path: |
-            setup.py
-            **/*requirements.txt
-            tox.ini
+  #     - uses: actions/setup-python@v5
+  #       with:
+  #         python-version: "3.12"
+  #         cache: pip
+  #         cache-dependency-path: |
+  #           setup.py
+  #           **/*requirements.txt
+  #           tox.ini
 
-      - run: make setup-ci
+  #     - run: make setup-ci
 
-      - run: make check
+  #     - run: make check
 
-  unit-test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version:
-          ["3.12", "pypy-3.10"]
-        os: [ubuntu-latest, macos-latest]
-    concurrency:
-      group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-ut-${{ matrix.os }}-${{ matrix.python-version }}
-      cancel-in-progress: true
-    timeout-minutes: 20
+  # unit-test:
+  #   runs-on: ${{ matrix.os }}
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       python-version:
+  #         ["3.12", "pypy-3.10"]
+  #       os: [ubuntu-latest, macos-latest]
+  #   concurrency:
+  #     group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-ut-${{ matrix.os }}-${{ matrix.python-version }}
+  #     cancel-in-progress: true
+  #   timeout-minutes: 20
 
-    steps:
-      - uses: actions/checkout@v4
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: pip
-          cache-dependency-path: |
-            setup.py
-            **/*requirements.txt
-            tox.ini
+  #     - name: Setup Python ${{ matrix.python-version }}
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: ${{ matrix.python-version }}
+  #         cache: pip
+  #         cache-dependency-path: |
+  #           setup.py
+  #           **/*requirements.txt
+  #           tox.ini
 
-      - run: make setup-ci
+  #     - run: make setup-ci
 
-      - name: Run tests
-        run: tox -e cov -- --discord-verbose=0
-        env:
-          PYTEST_DISCORD_WEBHOOK: ${{ secrets.PYTEST_DISCORD_WEBHOOK }}
+  #     - name: Run tests
+  #       run: tox -e cov -- --discord-verbose=0
+  #       env:
+  #         PYTEST_DISCORD_WEBHOOK: ${{ secrets.PYTEST_DISCORD_WEBHOOK }}
 
-      - name: Upload coverage report
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8'
-        run: |
-          python -m pip install --upgrade --disable-pip-version-check coveralls tomli
-          coveralls --service=github
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Upload coverage report
+  #       if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8'
+  #       run: |
+  #         python -m pip install --upgrade --disable-pip-version-check coveralls tomli
+  #         coveralls --service=github
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
