--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
       cancel-in-progress: true
     timeout-minutes: 20
     environment:
-      name: testpypi
+      name: pypi
       url: https://pypi.org/p/pytest-discord-fork
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
@@ -68,10 +68,10 @@ jobs:
           name: dist
           path: ./dist
 
-      - name: Publish package to TestPyPI
+      - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          repository-url: https://test.pypi.org/legacy/
+          repository-url: https://pypi.org/
           skip-existing: true
           verbose: true
 
