--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,42 +132,42 @@ jobs:
       - run: make check
 
   unit-test:
-  #   runs-on: ${{ matrix.os }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       python-version:
-  #         ["3.12", "pypy-3.10"]
-  #       os: [ubuntu-latest, macos-latest]
-  #   concurrency:
-  #     group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-ut-${{ matrix.os }}-${{ matrix.python-version }}
-  #     cancel-in-progress: true
-  #   timeout-minutes: 20
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version:
+          ["3.12", "pypy-3.10"]
+        os: [ubuntu-latest, macos-latest]
+    concurrency:
+      group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-ut-${{ matrix.os }}-${{ matrix.python-version }}
+      cancel-in-progress: true
+    timeout-minutes: 20
 
-  #   steps:
-  #     - uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
 
-  #     - name: Setup Python ${{ matrix.python-version }}
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: ${{ matrix.python-version }}
-  #         cache: pip
-  #         cache-dependency-path: |
-  #           setup.py
-  #           **/*requirements.txt
-  #           tox.ini
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: pip
+          cache-dependency-path: |
+            setup.py
+            **/*requirements.txt
+            tox.ini
 
-  #     - run: make setup-ci
+      - run: make setup-ci
 
-  #     - name: Run tests
-  #       run: tox -e cov -- --discord-verbose=0
-  #       env:
-  #         PYTEST_DISCORD_WEBHOOK: ${{ secrets.PYTEST_DISCORD_WEBHOOK }}
+      - name: Run tests
+        run: tox -e cov -- --discord-verbose=0
+        env:
+          PYTEST_DISCORD_WEBHOOK: ${{ secrets.PYTEST_DISCORD_WEBHOOK }}
 
-  #     - name: Upload coverage report
-  #       if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8'
-  #       run: |
-  #         python -m pip install --upgrade --disable-pip-version-check coveralls tomli
-  #         coveralls --service=github
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload coverage report
+        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8'
+        run: |
+          python -m pip install --upgrade --disable-pip-version-check coveralls tomli
+          coveralls --service=github
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
