--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,90 +18,90 @@ permissions:
   contents: read
 
 jobs:
-  build-package:
-    runs-on: ubuntu-latest
-    concurrency:
-      group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-build-pkg
-      cancel-in-progress: true
-    timeout-minutes: 20
+  # build-package:
+  #   runs-on: ubuntu-latest
+  #   concurrency:
+  #     group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-build-pkg
+  #     cancel-in-progress: true
+  #   timeout-minutes: 20
 
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         fetch-tags: true
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-          cache: pip
-          cache-dependency-path: |
-            setup.py
-            **/*requirements.txt
-            tox.ini
+  #     - uses: actions/setup-python@v5
+  #       with:
+  #         python-version: "3.12"
+  #         cache: pip
+  #         cache-dependency-path: |
+  #           setup.py
+  #           **/*requirements.txt
+  #           tox.ini
 
-      - run: make setup-ci
+  #     - run: make setup-ci
 
-      - run: make build
+  #     - run: make build
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: ./dist/*
+  #     - uses: actions/upload-artifact@v4
+  #       with:
+  #         name: dist
+  #         path: ./dist/*
 
-  publish-package:
-    needs: build-package
-    runs-on: ubuntu-latest
-    concurrency:
-      group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-publish-pkg
-      cancel-in-progress: true
-    timeout-minutes: 20
-    environment:
-      name: pypi
-      url: https://pypi.org/p/pytest-discord-fork
-    permissions:
-      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+  # publish-package:
+  #   needs: build-package
+  #   runs-on: ubuntu-latest
+  #   concurrency:
+  #     group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-publish-pkg
+  #     cancel-in-progress: true
+  #   timeout-minutes: 20
+  #   environment:
+  #     name: pypi
+  #     url: https://pypi.org/p/pytest-discord-fork
+  #   permissions:
+  #     id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
 
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: dist
-          path: ./dist
+  #   steps:
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         name: dist
+  #         path: ./dist
 
-      - name: Publish package to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://upload.pypi.org/legacy/
-          skip-existing: true
-          verbose: true
+  #     - name: Publish package to PyPI
+  #       uses: pypa/gh-action-pypi-publish@release/v1
+  #       with:
+  #         repository-url: https://upload.pypi.org/legacy/
+  #         skip-existing: true
+  #         verbose: true
 
-  sign-package:
-    needs: publish-package
-    runs-on: ubuntu-latest
-    concurrency:
-      group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-sign-pkg
-      cancel-in-progress: true
-    timeout-minutes: 20
-    permissions:
-      id-token: write
+  # sign-package:
+  #   needs: publish-package
+  #   runs-on: ubuntu-latest
+  #   concurrency:
+  #     group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-sign-pkg
+  #     cancel-in-progress: true
+  #   timeout-minutes: 20
+  #   permissions:
+  #     id-token: write
 
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: dist
-          path: ./dist
+  #   steps:
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         name: dist
+  #         path: ./dist
 
-      - name: Sign the dists with Sigstore
-        uses: sigstore/gh-action-sigstore-python@v2.1.1
-        with:
-          inputs: >-
-            ./dist/*.tar.gz
-            ./dist/*.whl
+  #     - name: Sign the dists with Sigstore
+  #       uses: sigstore/gh-action-sigstore-python@v2.1.1
+  #       with:
+  #         inputs: >-
+  #           ./dist/*.tar.gz
+  #           ./dist/*.whl
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: sigstore
-          path: ./dist/*
+  #     - uses: actions/upload-artifact@v4
+  #       with:
+  #         name: sigstore
+  #         path: ./dist/*
 
   lint:
     runs-on: ubuntu-latest
