--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build and publish the new version to PyPI
+name: Release to PyPI
 
 on:
   push:
@@ -57,6 +57,7 @@ jobs:
 
   generate-relese:
     # needs: publish-package
+    needs: build-package
     runs-on: ubuntu-latest
     permissions:
       id-token: write
